--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -1,5 +1,9 @@
 .wrapper {
-  font-size: 16px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-family: var(--font-family);
   font-weight: 700;
   min-width: 100px;
   padding: 9px 16px;
@@ -16,6 +20,16 @@
     opacity: 0.5;
   }
 }
+.icon + .title,
+.title + .icon {
+  margin-left: 8px;
+}
+.icon {
+  display: inline-block;
+  width: 20px;
+  text-align: center;
+}
+
 // button type
 .rounded {
   border-radius: 52px;
