--- a/src/Components/Layout/component/Header/Header.module.scss
+++ b/src/Components/Layout/component/Header/Header.module.scss
@@ -7,79 +7,72 @@
   width: 100%;
   height: var(--default-layout-header-height);
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+  background-color: var(--white);
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 .inner {
   height: 100%;
   width: var(--default-layout-width);
+  padding: 0 var(--default-layout-horizontal-spacer);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.search,
-.search-result {
-  width: 361px;
-}
-.search {
-  position: relative;
+.logo-link {
   display: flex;
-  height: var(--search-height);
-  padding-left: 16px;
-  background-color: rgba(22, 24, 35, 0.06);
-  border-radius: var(--search-border-radius);
-  border: 1.5px solid transparent;
-  input {
-    flex: 1;
-    height: 100%;
-    color: var(--black);
-    font-size: 16px;
-    caret-color: var(--primary);
-    line-height: 22px;
-    background: transparent;
+}
+// action
+.action {
+  display: flex;
+  align-items: center;
+}
+.action-btn {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  color: #161823;
+  padding: 4px 6px;
+  font-size: 22px;
+  cursor: pointer;
+  svg {
+    margin: 2px 2px;
   }
-  input:not(:placeholder-shown) ~ .search-btn {
-    color: rgba(22, 24, 35, 0.75);
-  }
-  &::after {
-    content: '';
+  .badge {
     position: absolute;
-    top: var(--search-top-spacer);
-    right: var(--search-button-width);
-    width: 1px;
-    height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-    background-color: rgba(22, 24, 35, 0.12);
+    top: 7px;
+    margin-left: 18px;
+    padding: 0px 6px;
+    height: 20px;
+    line-height: 20px;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--white);
+    font-family: var(--font-family);
+    background-color: var(--primary);
   }
-  &:focus-within {
-    border-color: rgba(22, 24, 35, 0.2);
-  }
 }
-.search-title {
-  font-size: 14px;
-  font-weight: 600;
-  padding: 5px 12px;
-  color: rgba(22, 24, 35, 0.5);
-}
-.clear,
-.loading {
-  position: absolute;
-  right: calc(var(--search-button-width) + 16px);
-  top: 50%;
-  transform: translateY(-50%);
-  color: rgba(22, 24, 35, 0.34);
-}
-.search-btn {
-  width: var(--search-button-width);
-  height: 100%;
-  border-top-right-radius: var(--search-border-radius);
-  border-bottom-right-radius: var(--search-border-radius);
+.more-btn {
   font-size: 20px;
-  color: rgba(22, 24, 35, 0.34);
-  &:hover {
-    cursor: pointer;
-    background-color: rgba(22, 24, 35, 0.03);
-  }
-  &:active {
-    background-color: rgba(22, 24, 35, 0);
-  }
+  margin-left: 24px;
+  padding: 4px 8px;
+  background: transparent;
+  cursor: pointer;
+}
+.user-avatar {
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.custom-login {
+  color: red;
 }
