--- a/src/Components/Popper/Popper.module.scss
+++ b/src/Components/Popper/Popper.module.scss
@@ -2,8 +2,10 @@
   width: 100%;
   max-height: min((100vh - 96px) - 60px, 734px);
   min-height: 100px;
-  padding: 8px;
+  padding: 8px 0px 0px;
   background: rgb(255, 255, 255);
   box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
 }
