--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -40,6 +40,20 @@
     background-color: rgba(22, 24, 35, 0.03);
   }
 }
+.follow {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--black);
+  background-color: var(--white);
+  border-color: rgba(22, 24, 35, 0.12);
+  &:hover {
+    border-color: rgb(208, 209, 211);
+    background-color: rgb(248, 248, 248);
+  }
+  &:focus {
+    outline: none;
+  }
+}
 .primary {
   color: var(--white);
   background-color: var(--primary);
